# nixos

./: .envrc  .gitignore  .sops.yaml  Cargo.toml  Makefile  README.md  agedit  flake.nix  generate.sh  install.sh  nx  package.nix  result  run_me.sh
.cloudflare/nix/: README.md  package.json  wrangler.jsonc
.github/workflows/: check.yml  release.yml
docs/: install.md  layout.md  nx.md  post-install.md  secrets.md  storage-design.md  troubleshooting.md
host/: flake.nix
host/docs/: troubleshooting.md
host/lis/: default.nix  disko.nix  to-disko.nix
host/modules/: common.nix  secrets.nix
modules/: accounts.nix  common.nix  features.nix  secrets.nix
modules/profiles/: server.nix
modules/programms/: appimage.nix  bin.nix  desktop.nix  essential.nix  flatpak.nix  system.nix
modules/services/: netbird.nix  socketcan.nix  wireguard.nix  zerotier.nix
modules/users/: bresilla.nix
rewrite/: Cargo.toml  README.md  package.nix
rewrite/src/: agent.rs  agent_bootstrap.rs  agent_client.rs  edit.rs  generate.rs  install_disk.rs  (+26 more)
scripts/: check.sh  disko-math.sh  disko-wizard.sh  finish-remote-install.sh  setup-test-secrets.sh
secrets/: system.yaml
src/: agent.rs  edit.rs  facts.rs  generate.rs  install.rs  install_artifacts.rs  install_disk.rs  install_disko.rs  install_exec.rs  install_local.rs  install_plan.rs  install_preflight.rs  install_remote.rs  install_secrets.rs  install_storage.rs  install_storage_plan.rs  install_ui.rs  install_wizard.rs  main.rs  nix_ast.rs  repo.rs  report.rs  sops.rs  sops_config.rs  sops_edit.rs  sops_values.rs  storage_cli.rs
(+46 files in other folders)
