[package]
name = "nox"
version = "0.1.0"
edition = "2021"

[dependencies]
age = { version = "0.11.3", features = ["armor"] }
age-core = "0.11.0"
aes-gcm = "0.10.3"
aes = "0.8.4"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.28.1"
futures-util = "0.3.31"
hkdf = "0.12.4"
nix = { version = "0.31.3", features = ["fs", "user"] }
p256 = "0.13.2"
postcard = { version = "1.1.3", features = ["use-std"] }
ratatui = "0.30.0"
rnix = "0.14.0"
bech32 = "0.9.1"
regex = "1.12.3"
rand = "0.8.5"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
russh = "0.62.1"
rtnetlink = { version = "0.21.0", features = ["tokio_socket"] }
tokio = { version = "1.48.0", features = ["rt", "net", "time", "io-util"] }
walkdir = "2.5.0"
yubikey = { version = "0.8.0", features = ["untested"] }
zeroize = "1.8.2"
tui-popup = "0.7"
tui-input = "0.11.1"
tui-globe = "1.0.0"
sha-crypt = "0.5"
lis = { git = "https://github.com/onix-os/lis" }
